ops/k8s/deployment.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: solar-system
spec:
  replicas: 2
  selector:
    matchLabels:
      app: solar-system
  template:
    metadata:
      labels:
        app: solar-system
    spec:
      containers:
      - name: solar-system
        image: cyrilbaah/solar-system:v2
        resources:
          limits:
            memory: "1.5Gi"
            cpu: "1"
          requests:
            memory: "600Mi"
            cpu: "750m"
        ports:
          - containerPort: 3000
