ops/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: solar-system
spec:
  type: ClusterIP
  selector:
    app: solar-system
  ports:
  - port: 3000
    targetPort: 3000
