ops/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: solar-system
spec:
  rules:
    - host: solar.local
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: solar-system
                port:
                  number: 80
